hphp/hack/test/typecheck/xhp_hint.php
<?hh // partial

class :foo {}

function f(): :foo {
  return 1;
}
